--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
   ],
   "require": {
     "php": ">=8.2",
-    "nimblephp/framework": "^0.1.0"
+    "nimblephp/framework": "^0.1.8",
+    "nimblephp/migrations": "^0.1.3",
+    "krzysztofzylka/html-generator": "^2.0.6"
   }
 }
