--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "require": {
     "php": ">=8.2",
-    "nimblephp/framework": "0.2.0.x-dev",
+    "nimblephp/framework": "^0.2.0",
     "krzysztofzylka/html-generator": "^2.0.6"
   }
 }
