--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   "require": {
     "php": ">=8.2",
     "nimblephp/framework": ">=0.2.0",
+    "nimblephp/migrations": "^0.2.3",
     "krzysztofzylka/html-generator": "^2.0.6"
   }
 }
